--- a/AboutPageAssets/styles/aboutPageStyle.css
+++ b/AboutPageAssets/styles/aboutPageStyle.css
@@ -560,4 +560,17 @@ footer .footerNote {
 	margin-right: 3%;
 	font-family: sans-serif;
 }
+.project-cards {
+	display: flex;
+	gap: 20px;          /* space between cards */
+	flex-wrap: wrap;    /* wrap on smaller screens */
+	justify-content: flex-start; /* or center if you prefer */
+	margin-top: 20px;
+  }
+  
+  .project-cards a img {
+	border: 0;
+	max-width: 100%;
+  }
+  
 }
